[project]
name = "baclib"
authors = [{name="Tom Stanton", email="tomdstanton@gmail.com" }]
description = "Lightweight Python Library for Bacterial Genomics"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
dependencies = ["numpy", "scipy"]
dynamic = ["version"]
keywords = ["bioinformatics", "microbiology", "genomics"]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.optional-dependencies]
test = ["pytest"]
docs = ["mkdocs-material", "mkdocs-api-autonav", "mkdocs-include-markdown-plugin"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"
