[project]
name = "baclib"
authors = [{name="Tom Stanton", email="tomdstanton@gmail.com" }]
description = "Lightweight Python Library for Bacterial Genomics"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
dependencies = [
    "numba==0.63.1",
    "numpy",
    "scipy",
]
dynamic = ["version"]
urls = {Homepage = "https://tomdstanton.github.io/baclib/", Repository = "https://github.com/tomdstanton/baclib", Documentation = "https://tomdstanton.github.io/baclib/"}
keywords = ["bioinformatics", "microbiology", "genomics"]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.optional-dependencies]
test = ["pytest"]
docs = ["mkdocs-material", "mkdocs-api-autonav", "mkdocs-include-markdown-plugin"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/baclib/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/baclib"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 120
target-version = "py311"
